Update theme config

--- a/theme.toml
+++ b/theme.toml
@@ -1,18 +1,17 @@
-name = "Startbootstrap Clean Blog"
+name = "Hugo Clean Blog"
 license = "Apache 2.0"
 licenselink = "https://github.com/humboldtux/startbootstrap-clean-blog/blob/master/LICENSE.md"
-description = "Startbootstrap Clean Blog"
+description = "Minimalist blog template"
 homepage = "https://github.com/humboldtux/startbootstrap-clean-blog"
 tags = ["blog", "bootstrap"]
 features = ["blog", "bootstrap"]
 min_version = 0.18
 
 [author]
-  name = "Benoît Benedetti"
-  homepage = "http://www.humboldtux.com"
+  name = "Derrick Showers"
+  homepage = "http://derrickshowers.com"
 
-# original theme
+# Original theme
 [original]
   name = "Startbootstrap Clean Blog"
-  homepage = "http://startbootstrap.com/template-overviews/clean-blog/"
-  repo = "https://github.com/IronSummitMedia/startbootstrap-clean-blog"
+  repo = "https://github.com/humboldtux/startbootstrap-clean-blog/"
